fix language dropdown on iphone

--- a/app/styles.css
+++ b/app/styles.css
@@ -100,13 +100,15 @@ aside.languages {
       box-sizing: border-box;
       display: inline-block;
       padding: 10px 5px;
+      outline: none;
       height: 100%;
       width: 100%;
     }
   }
 
   & ul:hover,
-  &:matches(:active, :focus) ul {
+  &:matches(:active, :focus, :focus-within) ul,
+  & header:matches(:active, :focus) ~ ul {
     display: block;
   }
 }
